--- a/ClicWars.Game/app/styles/game.less
+++ b/ClicWars.Game/app/styles/game.less
@@ -34,6 +34,25 @@ body {
       top: 0;
       left: 0;
     }
+
+    .panel-death {
+      top: 0;
+      left: 0;
+      position: absolute;
+      text-align: center;
+      width: 600px;
+      height: 600px;
+      padding: 100px 0px;
+      background-color: rgba(42, 35, 35, 0.66);
+      color: #FFFFFF;
+
+      .killer-body {
+        width: 32px;
+        height: 32px;
+        margin: 20px auto;
+        background-image: url('../images/sprites/characters.png'); //TODO : image-url as variable
+      }
+    }
   }
 
   .chat {
@@ -56,7 +75,7 @@ body {
         .body {
           width: 32px;
           height: 32px;
-          background-image: url('../images/sprites/characters.png');
+          background-image: url('../images/sprites/characters.png'); //TODO : image-url as variable
         }
 
         .hits {
